Integración de backend, pantalla de inicio y comparacion funcionando

--- a/comparar.html
+++ b/comparar.html
@@ -79,9 +79,9 @@
     <h1>🪙 CryptoTracker</h1>
     <nav>
       <a href="index.html">Inicio</a>
-      <a href="#">Gráficas por Cripto</a>
+      <a href="historial.html">Gráficas por Cripto</a>
       <a href="#">Comparación</a>
-      <a href="#">Regresión</a>
+      <a href="regresion.html">Regresión</a>
     </nav>
   </header>
 
@@ -90,17 +90,17 @@
 
     <div class="form-section">
       <label for="crypto-select">Selecciona criptomonedas:</label><br>
-      <select id="crypto-select" multiple size="5">
-        <option value="BTC">Bitcoin (BTC)</option>
-        <option value="ETH">Ethereum (ETH)</option>
-        <option value="USDT">Tether (USDT)</option>
-        <option value="ADA">Cardano (ADA)</option>
-        <option value="SOL">Solana (SOL)</option>
-        <option value="XRP">XRP</option>
-        <option value="USDC">USD Coin (USDC)</option>
-        <option value="DOGE">Dogecoin (DOGE)</option>
-        <option value="AVAX">Avalanche (AVAX)</option>
-        <option value="DOT">Polkadot (DOT)</option>
+      <select id="crypto-select" multiple size="6">
+        <option value="bitcoin">Bitcoin (BTC)</option>
+        <option value="ethereum">Ethereum (ETH)</option>
+        <option value="cardano">Cardano (ADA)</option>
+        <option value="solana">Solana (SOL)</option>
+        <option value="dogecoin">Dogecoin (DOGE)</option>
+        <option value="ripple">XRP</option>
+        <option value="hyperliquid">Hyperliquid</option>
+        <option value="bitcoin-cash">Bitcoin Cash</option>
+        <option value="chainlink">Chainlink</option>
+        <option value="tron">Tron (TRX)</option>
       </select>
     </div>
 
